--- a/src/style/section.css
+++ b/src/style/section.css
@@ -97,13 +97,18 @@
     &:nth-child(5),
     &:nth-child(6),
     &:nth-child(8),
-    &:nth-child(3n + 12) {
+    &:nth-child(11),
+    &:nth-child(12),
+    &:nth-child(14),
+    &:nth-child(18) {
       margin-right: 0;
       float: right;
     }
 
     &:nth-child(4),
-    &:nth-child(8) {
+    &:nth-child(8),
+    &:nth-child(10),
+    &:nth-child(14) {
       height: 26rem;
       width: calc(2 / 3 * 100% - (2rem / 3));
     }
